# rag-searcher

./: .gitignore  LICENSE  README.md  chat.py  embedder.py  indexer.py  ingester.py  page.py  pyproject.toml  rag.py  run_indexer.py  semantic_search.py
db/: connection.py  migrate.py  schema.sql  seeds.sql
db/queries/: content.py  embedding.py  fetcher.py  link.py  page.py  search.py
rag_searcher/: config.py
rag_searcher/core/: embedder.py
rag_searcher/db/: migrate.py  pool.py
src/rag_searcher/: config.py
src/rag_searcher/api/: main.py
src/rag_searcher/api/routers/: chat.py  search.py
src/rag_searcher/core/: content_extractor.py  embedder.py  fetcher.py  link_parser.py  llm.py
src/rag_searcher/db/: migrate.py  pool.py
src/rag_searcher/db/migrations/: 001_initial.sql
src/rag_searcher/db/queries/: content.py  embedding.py  fetcher.py  link.py  page.py  page_type.py
src/rag_searcher/models/: page.py
src/rag_searcher/services/: embedder.py  initialization.py  llm.py  page_setup.py
src/rag_searcher/services/indexing/: content.py  embedding.py  link.py  page.py  page_config.py
src/rag_searcher/workers/: indexing_worker.py
