[project]
name = "rag-searcher"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "curl-cffi>=0.15.0",
    "fastapi>=0.139.0",
    "openai>=2.44.0",
    "pgvector>=0.4.2",
    "psycopg-pool>=3.3.1",
    "psycopg[binary,pool]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "trafilatura>=2.1.0",
    "uvicorn>=0.50.2",
]
